--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "partykit deploy"
   },
   "dependencies": {
-    "partysocket": "0.0.8"
+    "partysocket": "0.0.8",
+    "y-partykit": "^0.0.7"
   },
   "devDependencies": {
     "partykit": "0.0.27",
